	path. This allows us to remove priv/lib/Makefile hack needed to run
	the package testsuite.

	* src/exmpp_xml.erl: Use exmpp_internals to load/unload its port
	driver.

	* configure.ac, Makefile.am: Disconnect priv directory from the build,
	prior to its removal.

	* priv/: Removed directory, because it's not needed anymore by the
	testsuite.

2007-02-28  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/exmpp_internals.erl, src/exmpp_xml.erl: To avoid conflicts
	between an installed exmpp and a fresh build during testsuite runs,
	port drivers are first checked in working subdirectories. However,
	this is not done in modules from the compat layer (ejabberd_zlib,
	iconv and tls).

	* m4/zlib.m4: New M4 to check Zlib presence.

	* m4/openssl.m4: New M4 to check OpenSSL presence.

	* m4/expat.m4: Renamed AM_EXPAT to EXMPP_EXPAT to avoid Automake AM
	namespace pollution.

	* m4/iconv.m4, m4/lib-link.m4, m4/lib-prefix.m4, m4/lib-ld.m4: Rewrote
	iconv.m4 because the one from gettext seems broken with
	cross-compilation and win32 environment.

	* configure.ac: Add support for cross-compilation and win32 platform.
	Updated checks for Expat and libiconv. Added checks for OpenSSL.

	* c_src/Makefile.am: Added more AM_CONDITIONNAL's to enable/disable
	port drivers one by one. Fixed `tls_drv' dependencies. Added support
	for win32.

2007-02-21  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/exmpp_jid.erl: Add support for JID comparison.

	* testsuite/check_jid.erl: Add JID comparison testsuite.

	* include/exmpp.hrl, src/exmpp_jid.erl, src/jlib.erl,
	testsuite/check_jid.erl: Fields of the #jid record were renamed to use
	the names found in RFC 3920. THIS CHANGE BREAKS API (not ABI).

	* ebin/Makefile.am: Because of a misuse of Automake conditionnals, the
	`beam_DATA' variable was not correct and the compat modules were never
	installed nor cleaned.

2007-02-20  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
